--- a/index.html
+++ b/index.html
@@ -14,37 +14,51 @@
 <body>
 
     <header>
-        <h1 id="logo">dev.finance$</h1>
+        <img src="./assets/logo.svg" alt="Logo Dev Finance">
     </header>
-
 
 
     <main class="container">
         <section id="balance">
-            <h2>Balanço</h2>
+            <h2 class="sr-only">Balanço</h2>
 
             <div class="card">
-                <h3>Entradas</h3>
+                <h3>
+                    <span>Entradas</span>
+                    <img src="./assets/income.svg" alt="Image de entradas">
+                </h3>
                 <p>5.000,00 $</p>
             </div>
             <div class="card">
-                <h3>Saidas</h3>
+                <h3>
+                    <span>Saidas</span>
+                    <img src="./assets/expense.svg" alt="Image de entradas">
+
+                </h3>
                 <p>5.000,00 $</p>
             </div>
             <div class="card total">
-                <h3>Total</h3>
+                <h3>
+                    <span>Total</span>
+                    <img src="./assets/total.svg" alt="Image de entradas">
+                </h3>
                 <p>5.000,00 $</p>
             </div>
         </section>
 
         <section id="transactions">
-            <h2>Transações</h2>
+            <h2 class="sr-only">Transações</h2>
+
+            <a href="#" class="button new">+Nova Transação</a>
+
             <table id="data-table">
                 <thead>
                     <tr>
                         <th class='description'>Descrição</th>
                         <th>Valor</th>
                         <th>Data</th>
+                        <th></th>
+
 
                     </tr>
                 </thead>
@@ -54,16 +68,25 @@
                         <td class='description'>Luz</td>
                         <td class='expense'>- 500,00 $</td>
                         <td class='date'>24/01/2021</td>
+                        <td>
+                            <img src="./assets/minus.svg" alt="Remover transação">
+                        </td>
                     </tr>
                     <tr>
                         <td class='description'>Criação website</td>
                         <td class='income'>5000,00 $</td>
                         <td class='date'>24/01/2021</td>
+                        <td>
+                            <img src="./assets/minus.svg" alt="Remover transação">
+                        </td>
                     </tr>
                     <tr>
                         <td class='description'>Internet</td>
                         <td class='expense'>- 200,00 $</td>
                         <td class='date'>24/01/2021</td>
+                        <td>
+                            <img src="./assets/minus.svg" alt="Remover transação">
+                        </td>
                     </tr>
                 </tbody>
             </table>
