--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section id="transactions">
             <h2 class="sr-only">Transações</h2>
 
-            <a href="#" class="button new">+Nova Transação</a>
+            <a href="#" onclick="Modal.open()" class="button new">+Nova Transação</a>
 
             <table id="data-table">
                 <thead>
@@ -93,11 +93,54 @@
         </section>
     </main>
 
+    <div class="modal-overlay active">
+        <div class="modal">
+            <div id="form">
+                <h2>Nova Transação</h2>
+                <form action="#">
+                    <div class="input-group">
+                        <label class="sr-only" for="description">Descrição</label>
+                        <input type="text" id="description" name="description" placeholder="descrição">
+                    </div>
+                    <div class="input-group">
+                        <label class="sr-only" for="ammount">Valor</label>
+                        <input type="number" id="ammount" step="0.01" name="ammount" placeholder="0,00">
+                        <small class="help">Usa o sinal - (negativo) para despesas e , (virgula) para casas decimais</small>
+                    </div>
+                    <div class="input-group">
+                        <label class="sr-only" for="date">Data</label>
+                        <input type="date" id="date" name="date" placeholder="Data">
+                    </div>
+                    <div class="input-group actions">
+                        <a href="#" onclick="Modal.close()" class="button cancel">Cancelar</a>
+                        <button>Salvar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
 
 
     <footer>
         <p>dev.finance$</p>
     </footer>
 
+    <script>
+        const Modal = {
+            open() {
+                //Abrir modal
+                //Adicionar a class active ao modal
+                document.querySelector('.modal-overlay').classList.add('active');
+            },
+            close() {
+                //Fechar modal
+                //Remover class active do modal
+                document.querySelector('.modal-overlay').classList.remove('active');
+            }
+        }
+    </script>
+
 </body>
-</html
+
+</html>
